# social_network

./: Readme.md  docker-compose.yml  pyproject.toml
clonestagram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
clonestagram/clone/: models.py  views.py
clonestagram/clone/migrations/: 0002_alter_post_id.py  0003_remove_post_photo.py
clonestagram/clonestagram/: asgi.py  django_prac.json  settings.py  urls.py
clonestagram/clonestagram/.config/: django_prac.json
clonestagram/clonestagram/registration/: login.html
clonestagram/messenger/: apps.py  consumers.py  forms.py  models.py  urls.py  views.py
clonestagram/messenger/migrations/: 0001_initial.py  0002_chat_is_private_chat_key_alter_chat_members.py
clonestagram/social_network/: apps.py  forms.py  models.py  urls.py  views.py
clonestagram/social_network/migrations/: 0001_initial.py  0002_alter_post_id.py  0003_remove_post_photo.py  0004_post_photo.py  0005_comments.py  0006_post_comm_post_likes.py  0006_remove_post_photo.py  0007_post_photo.py  0008_remove_post_text_alter_post_caption.py  0009_merge_20220404_1905.py  0010_remove_post_comm_remove_post_likes_remove_post_photo_and_more.py  0011_alter_post_author.py  0012_rename_author_post_user.py  0013_alter_post_user.py  0014_post_comm_post_likes_post_photo.py  0015_alter_post_photo.py  0017_alter_profile_options.py  (+8 more)
clonestagram/static/: style.css
clonestagram/templates/: base.html  header.html  post_create.html  post_detail.html  profile.html  tape.html
clonestagram/user/: forms.py  views.py
design/: lenta_figma
user/: forms.py
(+13 files in other folders)
